# sahayakan

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  random-notes.md  setup.sh
.claude/commands/: add-api-route.md  add-migration.md  check-status.md  deploy.md  new-agent.md  prod-logs.md  prod-status.md  rebuild-service.md  run-tests.md  test-agent.md
.github/workflows/: ci.yml  deploy.yml  docs.yml
cli/: api_client.py  main.py  register_github_app.sh
control-plane/api-server/: .dockerignore  requirements.txt
control-plane/event_bus/: processor.py
control-plane/notifications/: slack_notifier.py
control-plane/scheduler/: cron.py  service.py
data-plane/agent_runner/: embedding_service.py  knowledge.py  logging_utils.py  main.py  model_config.py  runner.py  sanitize.py  semantic_context.py  structured_log.py
data-plane/llm_client/: base.py  gemini_client.py
data-plane/prompts/: insights_detection.prompt  issue_analysis.prompt  meeting_summary.prompt  pr_context.prompt  slack_digest.prompt  trend_analysis.prompt
docs/: DEPLOYMENT_PLAN.md  MASTER_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md
docs/manual/: mkdocs.yml
docs/research/: OPENCODE_SDK_EVALUATION.md
infrastructure/: .env.dev  .env.example  docker-compose.prod.yml  docker-compose.yml
knowledge-cache/: .gitignore
scripts/: test_issue_triage.py  test_pr_context.py
tests/: test_api.py  test_issue_triage_e2e.py  test_stage10_e2e.py  test_stage5_e2e.py  test_stage7_e2e.py  test_stage8_e2e.py
web-ui/: Dockerfile  package-lock.json  package.json  serve.json
(+123 files in other folders)
